Basic special assistane fields added, no price added yet

--- a/templates/details_confirmation.html
+++ b/templates/details_confirmation.html
@@ -27,7 +27,7 @@
 		<div class="gtco-container">
 			<div class="col-lg-8">
 			<div class="row">
-				<p> Please confirm your details below in order to finalize your flight:</p>
+				<h4> Please confirm your details below in order to finalize your flight:</h4>
                             <div class="col-lg-12">
                              <form method="POST">
                                  {% csrf_token %}
