--- a/templates/index.html
+++ b/templates/index.html
@@ -138,10 +138,11 @@
 														<div class="col-xxs-12 col-xs-6 mt alternate">
 															<div class="input-field">
 																<label>Date of Departure:</label>
-																<input type="text" class="form-control"  name="start_date"
+																<input type="text" class="form-control" id="date-start"  name="start_date"
 																	placeholder="yyyy-mm-dd" />
 															</div>
 														</div>
+
 
 													<!--	<div class="col-xxs-12 col-xs-6 mt alternate">
 															<div class="input-field">
