--- a/templates/flight_details.html
+++ b/templates/flight_details.html
@@ -29,9 +29,9 @@
                 <img class="col-md-2" src="/media/{{ object.image }}">
 				<h2>{{object.airline}}</h2><h5> {{object.flight_no}}</h5>
             <br>
-            <h4>{{object.start}}</h4><h5>{{object.start_time}}</h5>
+            <h4>{{object.start}} &emsp;  {{object.start_code}} </h4><h5>{{object.start_time}}</h5>
                 <br><h5>TO</h5><br>
-            <h4>{{object.destination}}</h4><h5>{{object.arrival_time}}</h5>
+            <h4>{{object.destination}} &emsp; {{object.destination_code}} </h4><h5>{{object.arrival_time}}</h5>
 			</div>
             <div class="col-lg-7">
                         <div class="checkout__order">
