--- a/templates/payment.html
+++ b/templates/payment.html
@@ -166,6 +166,18 @@
                                 </ul>
                             </div>
 
+                            <div class="checkout__order__costs">
+                                <ul>
+                                    <li>Discount Applicable<span>
+
+                                            <b>{{ object.discount_val }}%</b>
+
+
+                                        </span></li>
+
+                                </ul>
+                            </div>
+
                              <div class="checkout__order__total">
                                 <ul>
                                     <li><b>Total</b><span>
