Dummy Images + Formatting

--- a/templates/lounge.html
+++ b/templates/lounge.html
@@ -70,7 +70,7 @@
 
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img src="{% static 'images/rsz_fc_lounge.jpg' %}" >
                         </div>
 
 
@@ -84,7 +84,7 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
+                            <img src="{% static 'images/rsz_lounge2.jpg' %}" >
                         </div>
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
