Navbar Link + Starter Info

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
 					<ul>
 						<li><a href="/destination.html">Destinations</a></li>
 						<li><a href="/special_assistance.html">Special Assistance</a></li>
+						<li><a href="lounge.html">Travoyage Lounge</a></li>
 						<li><a href="/contact.html">Contact Us</a></li>
 						{% if request.user.is_authenticated %}
 						<li><a href="/my_account">My Account</a></li>
