--- a/templates/lounge.html
+++ b/templates/lounge.html
@@ -60,11 +60,12 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
+                            <h4>Travoyage Premium</h4>
+                            <p>Travoyage Premium is an exculsive airport lounge for our first-class passengers. Each premium lounge has the following features: </p>
+
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>Travoyage Premium lounge facilities for first-class passengers are complimentary!</p>
                             <br>
                         </div>
 
@@ -88,11 +89,11 @@
                         </div>
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
-                            <h4>Our Services</h4>
+                            <h4>Travoyage++</h4>
                             <p>Lorem ipsum</p>
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>Travoyage++ lounge can be accessed on a pay-per-use basis of $5 per head per hour. </p>
                             <br>
                         </div>
 
