--- a/templates/lounge.html
+++ b/templates/lounge.html
@@ -3,9 +3,11 @@
 
 <html>
 <head>
+    <script src="https://use.fontawesome.com/458ca512ac.js"></script>
     <title>Traveler &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
-    <link href="{% static 'css/style_spec_assist.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <link href="{% static 'css/icomoon.css' %}" rel="stylesheet" type="text/css" media="all" />
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 {% block content %}
@@ -62,6 +64,19 @@
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <h4>Travoyage Premium</h4>
                             <p>Travoyage Premium is an exculsive airport lounge for our first-class passengers. Each premium lounge has the following features: </p>
+                            <!--                            <i class="fas fa-wifi"></i>-->
+                            <ul style="list-style-type: none;">
+                                <li> Lounge Bay</li>
+                                <li> Wi-Fi</li>
+                                <li> Charging Stations</li>
+                                <li> Sleep Bay</li>
+                                <li> FLight Information</li>
+                                <li> Shower Facilities</li>
+                                <li> Massage Chairs</li>
+                                <li> Food & Beverage</li>
+                                <li> Telephone</li>
+                                <li> Television</li>
+                            </ul>
 
                             <br>
                             <h4>Charges</h4>
@@ -91,6 +106,16 @@
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
                             <h4>Travoyage++</h4>
                             <p>Lorem ipsum</p>
+                            <ul style="list-style-type: none;">
+                                <li> Lounge Chairs</li>
+                                <li> Wi-Fi</li>
+                                <li> Charging Stations</li>
+                                <li> Flight Information</li>
+                                <li> Kids Play Area</li>
+                                <li> Food & Beverage</li>
+                                <li> Telephone</li>
+                                <li> Television</li>
+                            </ul>
                             <br>
                             <h4>Charges</h4>
                             <p>Travoyage++ lounge can be accessed on a pay-per-use basis of $5 per head per hour. </p>
