Lounge cost edited :)

--- a/templates/lounge.html
+++ b/templates/lounge.html
@@ -118,7 +118,7 @@
                             </ul>
                             <br>
                             <h4>Charges</h4>
-                            <p>Travoyage++ lounge can be accessed on a pay-per-use basis of $5 per head per hour. </p>
+                            <p>Travoyage++ lounge can be accessed on a pay-per-use basis of $10 per head. </p>
                             <br>
                         </div>
 
