--- a/templates/base.html
+++ b/templates/base.html
@@ -119,8 +119,8 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>About Us</h3>
-						<p>We just don't allow you to book flights, we create memorable experiences. If you'd like your experience to be a memory, do make sure to book a trip with us. </p>
-					</div>
+						<p>Travoyage doesn't just allow you to book a flight, it ensures a travel experience just as memorable for you as the destination. Your comfort is our priority! Happy flying!✈️</p>
+</div>
 				</div>
 
 				<div class="col-md-3 col-md-push-1">
