--- a/templates/booking_confirmed.html
+++ b/templates/booking_confirmed.html
@@ -126,8 +126,8 @@
 
 																<h4 align="left">{{flight.ticket.flight_no}}, {{flight.ticket.airline}}</h4>
 																<h4 align="left">{{flight.ticket.date}}</h4>
-																<p class="alignleft">Departure: {{flight.ticket.start}}, {{flight.ticket.start_time}}  </p>
-                            									<p class="alignright"> To: {{flight.ticket.destination}}, {{flight.ticket.arrival_time}}</p>
+																<p class="alignleft">🛫  Departure: {{flight.ticket.start}}, {{flight.ticket.start_time}}  </p>
+                            									<p class="alignright">🛬   To: {{flight.ticket.destination}}, {{flight.ticket.arrival_time}}</p>
 																<div style="clear: both;"></div>
 																Number of Seats: <b>{{flight.quantity}}</b>,
 																Class: <b>{{flight.class_display}}</b>
