--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -43,8 +43,8 @@
 							<h1 align="left">{{flight.flight_no}}, {{flight.airline}}</h1>
 							<img class="col-md-2" src="/media/{{ flight.image }}">
 							<p align="left">{{flight.date}}</p>
-							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
-                            <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
+							<p align="left">🛫  Departure: {{flight.start}}, {{flight.start_time}}  </p>
+                            <p align="left">🛬   To: {{flight.destination}}, {{flight.arrival_time}}</p>
 							<p align="left">Flight Duration: {{flight.duration_hr}} hours {{flight.duration_min}} minutes</p>
 							<p align="right"><span class="btn btn-primary" >Click to Book</span></p>
 						</div>
