--- a/templates/index.html
+++ b/templates/index.html
@@ -390,7 +390,7 @@
 		<div class="gtco-container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Subscribe</h2>
+					<h2><b>Subscribe</b></h2>
 					<p>Would you like to be updated about the latest offers? Please subscribe here:</p>
 				</div>
 			</div>
@@ -419,8 +419,8 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>About Us</h3>
-						<p>We don't just allow you to book flights, we create memorable experiences. If you'd like your experience to be a memory,
-						do make sure to book a trip with us.</p>
+						<p>Travoyage doesn't just allow you to book a flight, it ensures a travel experience just as memorable for you as the destination. Your comfort is our priority! Happy flying!✈️</p>
+
 					</div>
 				</div>
 
