--- a/templates/lounge.html
+++ b/templates/lounge.html
@@ -3,11 +3,11 @@
 
 <html>
 <head>
-    <script src="https://use.fontawesome.com/458ca512ac.js"></script>
+<!--    <script src="https://use.fontawesome.com/458ca512ac.js"></script>-->
     <title>Traveler &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
     <link href="{% static 'css/icomoon.css' %}" rel="stylesheet" type="text/css" media="all" />
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
 </head>
 <body>
 {% block content %}
@@ -35,10 +35,10 @@
 
 
     <div class="gtco-section3">
-        <div class="col-md-8 col-md-offset-2 text-center gtco-heading m-class">
-            <h2>Insert Headline</h2>
-            <p>Sub heading</p>
-        </div>
+<!--        <div class="col-md-8 col-md-offset-2 text-center gtco-heading m-class">-->
+<!--            <h2>Insert Headline</h2>-->
+<!--            <p>Sub heading</p>-->
+<!--        </div>-->
 
         <div class="container">
             <div class="tabs-sa">
@@ -66,16 +66,15 @@
                             <p>Travoyage Premium is an exculsive airport lounge for our first-class passengers. Each premium lounge has the following features: </p>
                             <!--                            <i class="fas fa-wifi"></i>-->
                             <ul style="list-style-type: none;">
-                                <li> Lounge Bay</li>
-                                <li> Wi-Fi</li>
-                                <li> Charging Stations</li>
-                                <li> Sleep Bay</li>
-                                <li> FLight Information</li>
-                                <li> Shower Facilities</li>
-                                <li> Massage Chairs</li>
-                                <li> Food & Beverage</li>
-                                <li> Telephone</li>
-                                <li> Television</li>
+                                <li><i class="fa fa-glass feature-icon" aria-hidden="true"></i>Lounge Bay & Bar</li>
+                                <li><i class="fa fa-wifi feature-icon" aria-hidden="true"></i> Wi-Fi</li>
+                                <li><i class="fa fa-plug feature-icon" aria-hidden="true"></i> Charging Stations</li>
+                                <li><i class="fa fa-bed feature-icon" aria-hidden="true"></i> Sleep Bay</li>
+                                <li><i class="fa fa-plane feature-icon" aria-hidden="true"></i> Flight Information</li>
+                                <li><i class="fa fa-shower feature-icon" aria-hidden="true"></i> Shower Facilities</li>
+                                <li><i class="fa fa-cutlery feature-icon" aria-hidden="true"></i> Food & Beverage</li>
+                                <li><i class="fa fa-phone feature-icon" aria-hidden="true"></i> Telephone</li>
+                                <li><i class="fa fa-television feature-icon" aria-hidden="true"></i> Television</li>
                             </ul>
 
                             <br>
@@ -105,16 +104,16 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
                             <h4>Travoyage++</h4>
-                            <p>Lorem ipsum</p>
+                            <p>Travoyage++ is open for all our passengers on an hourly payment basis. Access to this lounge is not included in the tickets.Each Travoyage++ Lounge has the following features:</p>
                             <ul style="list-style-type: none;">
-                                <li> Lounge Chairs</li>
-                                <li> Wi-Fi</li>
-                                <li> Charging Stations</li>
-                                <li> Flight Information</li>
-                                <li> Kids Play Area</li>
-                                <li> Food & Beverage</li>
-                                <li> Telephone</li>
-                                <li> Television</li>
+                                <li><i class="fa fa-users feature-icon" aria-hidden="true"></i> Common Lounge Bay</li>
+                                <li><i class="fa fa-wifi feature-icon" aria-hidden="true"></i> Wi-Fi</li>
+                                <li><i class="fa fa-plug feature-icon" aria-hidden="true"></i> Charging Stations</li>
+                                <li><i class="fa fa-plane feature-icon" aria-hidden="true"></i> Flight Information</li>
+                                <li><i class="fa fa-rocket feature-icon" aria-hidden="true"></i> Kids Play Area</li>
+                                <li><i class="fa fa-cutlery feature-icon" aria-hidden="true"></i> Food & Beverage</li>
+                                <li><i class="fa fa-phone feature-icon" aria-hidden="true"></i> Telephone</li>
+                                <li><i class="fa fa-television feature-icon" aria-hidden="true"></i> Television</li>
                             </ul>
                             <br>
                             <h4>Charges</h4>
