--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,11 @@
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.min.css' %}">
+
 
 	<!-- Owl Carousel  -->
 	<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
