--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,8 @@
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
