Destination img links redirecting to pages now

--- a/templates/destination.html
+++ b/templates/destination.html
@@ -44,7 +44,7 @@
 				<div class="col-lg-4 col-md-4 col-sm-6">
 					<div class="card">
 
-						<a href="/media/{{ item.image }}">
+						<a href="{{item.get_abs_url}}">
 <!--							<a href="/media/{{ item.image }}" class="fh5co-card-item image-popup">-->
 							<figure>
 								<!--									<div class="overlay"><i class="ti-plus"></i></div>-->
