Date comparison added for cheaper flights section

--- a/templates/flight_details.html
+++ b/templates/flight_details.html
@@ -4,6 +4,7 @@
 {% block content%}
 <div id="page">
 
+    {{date}}
 
 	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home-2.jpg)">
 		<div class="overlay"></div>
