--- a/templates/special_assistance.html
+++ b/templates/special_assistance.html
@@ -56,10 +56,6 @@
                     <li class="nav-item sa-options">
                         <a data-toggle="tab" href="#tab-4" class="active show">Expecting Mother</a>
                     </li>
-
-                    <li class="nav-item sa-options">
-                        <a data-toggle="tab" href="#tab-5" class="active show">Travelling with an Infant</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -72,10 +68,17 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
+                            <p>Any passenger aged 60 years or above can avail the "Senior Citizen Special Assistance". The following will be provided in the form of assistance:</p>
+                            <ul>
+                                <li>A wheelchair with an attendant</li>
+                                <li>A loader to assist with luggage</li>
+                                <li>Priority Check in</li>
+                                <li>Priority Boarding and Deboarding</li>
+                                <li>Assistance with stowing and retrieving baggage</li>
+                            </ul>
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for senior citizens.</p>
                             <br>
                         </div>
 
@@ -100,10 +103,18 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
                             <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
+                            <p>Any passenger with a mobility disability can avail special assistance under this category. We recommend that The following will be provided in the form of assistance:</p>
+                            <ul>
+                                <li>A wheelchair with an attendant</li>
+                                <li>A loader to assist with luggage</li>
+                                <li>Priority Check in</li>
+                                <li>Priority Boarding and Deboarding</li>
+                                <li>Assistance with stowing and retrieving baggage</li>
+                                <li>Individual safety briefing by the Cabin Crew</li>
+                            </ul>
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>At Travoyage we strive to make our special customers’ travel experience most comfortable. There are no additional charges for availing special assistance in this category.</p>
                             <br>
                         </div>
 
@@ -149,33 +160,9 @@
                             <p>Lorem ipsum</p>
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>At Travoyage we strive to make our special customers’ travel experience most comfortable. There are no additional charges for availing special assistance in this category.</p>
                             <br>
                         </div>
-
-                    </div>
-                </div>
-
-                <div class="clearfix"></div>
-            </div>
-            <div class="tab-pane" id="tab-5">
-                <div class="gtco-container padding-tab">
-                    <div class="row">
-
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
-                            <br>
-                            <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
-                            <br>
-                        </div>
-
-
-                        <div class="col-lg-6 col-md-6" style="overflow: hidden ;">
-                            <img src="{% static 'images/img_1.jpg' %}" >
-                        </div>
-
 
                     </div>
                 </div>
@@ -186,8 +173,6 @@
         </div>
 
     </div>
-
-
 
 
     <div class="gototop js-top">
