All special assistance info

--- a/templates/special_assistance.html
+++ b/templates/special_assistance.html
@@ -103,7 +103,7 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
                             <h4>Our Services</h4>
-                            <p>Any passenger with a mobility disability can avail special assistance under this category. We recommend that The following will be provided in the form of assistance:</p>
+                            <p>Any passenger with a mobility disability can avail special assistance under this category. The following will be provided in the form of assistance:</p>
                             <ul>
                                 <li>A wheelchair with an attendant</li>
                                 <li>A loader to assist with luggage</li>
@@ -129,10 +129,18 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
+                            <p>Any passenger between the ages of 6-11 years is <strong>required</strong> to book this service. Passengers between the ages of 12-18 years can choose to avail this service on a payment basis.The following will be provided in the form of assistance:</p>
+                            <ul>
+                                <li>A loader to assist with luggage</li>
+                                <li>A Travoyage escort to assist the minor with check-in, security checks, immigration and customs</li>
+                                <li>Priority Check in</li>
+                                <li>Priority Boarding and Deboarding</li>
+                                <li>Assistance with stowing and retrieving baggage</li>
+                                <li>Individual safety briefing by the Cabin Crew</li>
+                            </ul>
                             <br>
                             <h4>Charges</h4>
-                            <p>At Travoyage we are committed to making our senior customers’ travel experience enjoyable and comfortable. There are no additional charges to avail special assistance for a senior citizens.</p>
+                            <p>At Travoyage we are committed to making our young customers’ travel experience most comfortable. In order to provide a good experience, we charge a fee of $25 to avail special assistance in this category. </p>
                             <br>
                         </div>
 
@@ -157,7 +165,15 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-6" style="padding-left: 3em;">
                             <h4>Our Services</h4>
-                            <p>Lorem ipsum</p>
+                            <p>All customers falling in this category <strong>are required</strong> to show a recent "fit-to-fly" certificate from their treating Gynecologist. The following will be provided in the form of assistance:</p>
+                            <ul>
+                                <li>A loader to assist with luggage</li>
+                                <li>A wheelchair, if the passenger requires it</li>
+                                <li>Priority Check in</li>
+                                <li>Priority Boarding and Deboarding</li>
+                                <li>Assistance with stowing and retrieving baggage</li>
+                                <li>Individual safety briefing by the Cabin Crew</li>
+                            </ul>
                             <br>
                             <h4>Charges</h4>
                             <p>At Travoyage we strive to make our special customers’ travel experience most comfortable. There are no additional charges for availing special assistance in this category.</p>
