Error message for 0 seats required

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<label class="sr-only" for="message">Message</label>
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Write us something" style="border: 2px solid #c295d8;" ></textarea>
+								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Write us something"></textarea>
 							</div>
 						</div>
 						<div class="form-group">
