--- a/templates/round_trip_search.html
+++ b/templates/round_trip_search.html
@@ -80,7 +80,9 @@
 					</div>
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
-							<li><a href="destination.html">Destination</a></li>
+							<li><a href="destination.html">Destinations</a></li>
+							<li><a href="special_assistance.html">Special Assistance</a></li>
+							<li><a href="lounge.html">Travoyage Lounge</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
 							{% if request.user.is_authenticated %}
 							<li><a href="/my_account">My Account</a></li>
